[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.robotpy]

# Version of robotpy this project depends onrobot
robotpy_version = " 2025.0.0b2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all"
    # "apriltag"
    # "commands2"
    # "cscore"
    # "navx"
    # "pathplannerlib"
    # "phoenix5"
     "phoenix6== 25.0.0b3"
    # "playingwithfusion"
    # "rev"
    # "romi"
    # "sim"
]